# Eclipse

./: .env.example  .gitignore  CLAUDE.md  README.md  context_profile.example.md  eclipse.example.toml  pyproject.toml
docs/: ROADMAP.md
eclipse/: __init__.py  cli.py  config.py  log.py  models.py  pipeline.py  review.py  search.py  secrets.py
eclipse/enrich/: __init__.py  dates.py  llm.py  prompts.py
eclipse/ingest/: __init__.py  registry.py  watcher.py
eclipse/notify/: __init__.py  notion.py  telegram.py
eclipse/transcribe/: __init__.py  diarize.py  whisper.py
eclipse/vault/: __init__.py  writer.py
scripts/: make_sample.ps1
tests/: conftest.py  test_cli_approve.py  test_config.py  test_diarize.py  test_enrich.py  test_notion.py  test_pipeline.py  test_registry.py  test_review.py  test_search.py  test_telegram.py  test_vault_writer.py
