[project]
name = "eclipse"
version = "0.1.0"
description = "Local-first meeting intelligence vault: drop audio, get organized, stay on top of everything."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "httpx>=0.27",
    "faster-whisper>=1.0.3",
    "av>=12.0",
    "watchdog>=4.0",
    "python-frontmatter>=1.1",
    "platformdirs>=4.2",
]

[project.scripts]
eclipse = "eclipse.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eclipse"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "frontmatter.*", "watchdog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
